# RoomAssist

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions_hap.csv  release.py  sdkconfig  sdkconfig.defaults  sdkconfig.old  tohttp.py
components/dht/: CMakeLists.txt  LICENSE
components/esp_idf_lib_helpers/: LICENSE  esp_idf_lib_helpers.h
components/ssd1306/: CMakeLists.txt  font8x8_basic.h  ssd1306.c  ssd1306.h  ssd1306_i2c_new.c
learn/: ir_encoder.c  ir_learn.c
learn/inc/: ir_encoder.h  ir_learn.h  ir_learn_err_check.h
learn/main/: ir_learn_test.c
main/: CMakeLists.txt  Kconfig.projbuild  adc_helper.c  adc_helper.h  airquality.c  airquality.h  app_main.c  console_init.c  dht22.c  dht22.h  homekit.c  homekit.h  ir_delta_encoder.c  ir_delta_encoder.h  ir_dyson_encoder.c  ir_dyson_encoder.h  ir_hta_encoder.c  ir_hta_encoder.h  ir_zro_encoder.c  ir_zro_encoder.h  ld2410.c  ld2410.h  max9814.c  max9814.h  mq135.c  mq135.h  nu_ld2410.c  nu_ld2410.h  oled.c  oled.h  ota.c  ota.h  rmt.c  rmt.h  server.pem  sgp41.c  sgp41.h  sntp.c  sntp.h  syslog.c  (+11 more)
spiffs/: index.html
